--- a/src/BankSystem/AppShell.xaml
+++ b/src/BankSystem/AppShell.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Bank_System.AppShell"
+    x:Class="BankSystem.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Bank_System"
+    xmlns:local="clr-namespace:BankSystem"
     Shell.FlyoutBehavior="Disabled"
-    Title="Bank_System">
+    Title="BankSystem">
 
     <ShellContent
         Title="Home"
