--- a/src/BankSystem/Platforms/Windows/App.xaml
+++ b/src/BankSystem/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="Bank_System.WinUI.App"
+    x:Class="BankSystem.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:Bank_System.WinUI">
+    xmlns:local="using:BankSystem.WinUI">
 
 </maui:MauiWinUIApplication>
