--- a/src/BankSystem/MainPage.xaml
+++ b/src/BankSystem/MainPage.xaml
@@ -1,36 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BankSystem.MainPage">
+             x:Class="BankSystem.MainPage"
+             Title="Банковская система">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <VerticalStackLayout Padding="30" Spacing="25">
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+        <Label 
+            Text="Добро пожаловать в банковскую систему управления и пользования банками." 
+            FontSize="24" 
+            HorizontalOptions="Center"
+            HorizontalTextAlignment="Center" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+        <Label 
+            Text="Выберите банк:" 
+            FontSize="18" 
+            HorizontalOptions="Center" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+        <Picker x:Name="bankPicker" Title="Выберите банк"/>
+
+        <HorizontalStackLayout Spacing="20" HorizontalOptions="Center">
+            <Button Text="Зарегистрироваться"
+                    BackgroundColor="#4CAF50"
+                    TextColor="White"
+                    Clicked="OnRegisterClicked" />
+
+            <Button Text="Войти"
+                    BackgroundColor="#007AFF"
+                    TextColor="White"
+                    Clicked="OnLoginClicked" />
+        </HorizontalStackLayout>
+
+        <Label x:Name="statusLabel"
+               TextColor="Red"
+               FontSize="14"
+               HorizontalOptions="Center" />
+
+    </VerticalStackLayout>
 
 </ContentPage>
