--- a/src/BankSystem/Pages/BankPages/AddBankPage.xaml
+++ b/src/BankSystem/Pages/BankPages/AddBankPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BankSystem.Pages.AddBankPage"
+             x:Class="BankSystem.Pages.BankPages.AddBankPage"
              Title="AddBankPage">
     
     <ScrollView Padding="20">
@@ -39,6 +39,8 @@
                     BackgroundColor="#4CAF50"
                     TextColor="White"
                     Clicked="OnAddButtonClicked" />
+
+            <Label x:Name="statusLabel" TextColor="Red" FontSize="14" />
         </VerticalStackLayout>
     </ScrollView>
     
