--- a/src/BankSystem/Pages/RegistrationPage.xaml
+++ b/src/BankSystem/Pages/RegistrationPage.xaml
@@ -6,17 +6,21 @@
     <ScrollView>
         <VerticalStackLayout Padding="30" Spacing="20">
 
-            <Label Text="Регистрация" FontSize="32" HorizontalOptions="Center" />
+            <Label x:Name="bankName" FontSize="24" HorizontalOptions="Center" />
 
-            <Entry x:Name="usernameEntry" Placeholder="Имя пользователя" />
+            <Entry x:Name="loginEntry" Placeholder="Логин" />
+            <Entry x:Name="nameEntry" Placeholder="Имя" />
             <Entry x:Name="emailEntry" Placeholder="Email" Keyboard="Email" />
+            <DatePicker x:Name="dateOfBirthPicker" Format="dd/MM/yyyy" />
+            <Entry x:Name="passportSeriesEntry" Placeholder="Серия паспорта" />
+            <Entry x:Name="phoneNumberEntry" Placeholder="Номер телефона" Keyboard="Telephone" />
             <Entry x:Name="passwordEntry" Placeholder="Пароль" IsPassword="True" />
             <Entry x:Name="confirmPasswordEntry" Placeholder="Подтвердите пароль" IsPassword="True" />
 
             <Button Text="Зарегистрироваться"
-                BackgroundColor="#007AFF"
-                TextColor="White"
-                Clicked="OnRegisterClicked" />
+                    BackgroundColor="#007AFF"
+                    TextColor="White"
+                    Clicked="OnRegisterClicked" />
 
             <Label x:Name="statusLabel" TextColor="Red" FontSize="14" />
 
